--- a/index.html
+++ b/index.html
@@ -7,25 +7,57 @@
     <style>
         body {
             background-color: bisque;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            box-sizing: border-box;
         }
-        h1{
-            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        h1 {
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             color: pink;
             text-align: center;
-            font-size: 100px;
+            font-size: 5rem; /* Set a reasonable font size for desktop */
+            margin: 0;
+            padding: 20px;
+        }
+        /* For mobile devices, adjust the font size */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 8vw; /* Make the title more responsive on small screens */
+            }
         }
         #buttons {
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 1vh;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 1rem;
+            border: none;
+            background-color: pink;
+            cursor: pointer;
+            border-radius: 8px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #ff69b4;
+        }
+        #yes_reaction, #no_reaction {
+            text-align: center;
+            font-size: 2rem;
+            margin-top: 20px;
         }
         #yes_reaction {
-            font-size: 4rem;
+            font-size: 3rem;
             color: #fff;
             text-shadow: 5px 5px 0 pink, 10px 10px 0 #00d4ff;
             animation: shadow-dance 2s infinite;
-            text-align: center;
         }
         @keyframes shadow-dance {
             0%, 100% {
@@ -35,14 +67,26 @@
                 text-shadow: -5px -5px 0 #00d4ff, -10px -10px 0 pink;
             }
         }
-        #no_reaction {
-            text-align: center;
-            font-size: 50px;
-        }
         img {
             display: block;
-            margin-left: auto;
-            margin-right: auto;
+            margin: 20px auto;
+            max-width: 80%; /* Limit the width of the image */
+            height: auto;
+        }
+        /* Prevent scrolling */
+        html, body {
+            overflow: hidden;
+        }
+        /* Make buttons and reactions adjust more naturally on small screens */
+        @media (max-width: 600px) {
+            #buttons {
+                flex-direction: column; /* Stack buttons vertically on mobile */
+            }
+            button {
+                width: 80%; /* Make buttons more mobile-friendly */
+                font-size: 1.2rem;
+                margin-bottom: 10px;
+            }
         }
     </style>
 </head>
@@ -58,20 +102,21 @@
 
     <script>
         function response(answer) {
-            const no_repsonses = ["Try again", "Doch", "Wrong answer"];
-            const random_no_repsonse = no_repsonses[ parseInt(Math.random() * no_repsonses.length) ];
+            const no_responses = ["Try again", "Doch", "Wrong answer"];
+            const random_no_response = no_responses[parseInt(Math.random() * no_responses.length)];
             if (answer === 'yes') {
                 document.getElementById("yes_reaction").innerHTML = "Yipeeeeeee!!!!!!";
                 document.getElementById('cat').src = "https://media0.giphy.com/media/beorHuw3tM7tcAFB0v/giphy.gif?cid=6c09b952hai6efaofshjr5scff3aqy86bgbikq7673mmanhh&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g";
                 document.getElementById("no_reaction").innerHTML = '';
             }
             else if (answer === 'no') {
-                document.getElementById("no_reaction").innerHTML = random_no_repsonse;
+                document.getElementById("no_reaction").innerHTML = random_no_response;
                 document.getElementById('cat').src = "https://media.tenor.com/jfqueL5IyBoAAAAM/catmad-cat-mad.gif";
-                document.getElementById('cat').style.width = "500px";
-                document.getElementById('cat').style.height = "500px";
+                document.getElementById('cat').style.width = "50%";
+                document.getElementById('cat').style.height = "auto";
                 document.getElementById("yes_reaction").innerHTML = '';
             }
         }
     </script>
 </body>
+</html>
