--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             color: pink;
             text-align: center;
-            font-size: 100px;
+            font-size: 10vw;
         }
         #buttons {
             display: flex;
@@ -68,8 +68,8 @@
             else if (answer === 'no') {
                 document.getElementById("no_reaction").innerHTML = random_no_repsonse;
                 document.getElementById('cat').src = "https://media.tenor.com/jfqueL5IyBoAAAAM/catmad-cat-mad.gif";
-                document.getElementById('cat').style.width = "500px";
-                document.getElementById('cat').style.height = "500px";
+                document.getElementById('cat').style.width = "70vw";
+                document.getElementById('cat').style.height = "70vw";
                 document.getElementById("yes_reaction").innerHTML = '';
             }
         }
