--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <h2 id="yes_reaction"></h2>
     <h2 id="no_reaction"></h2>
-    <img id="cat" src="https://i.pinimg.com/originals/42/61/ec/4261ec8b20a4ec6f9cf047250024371f.gif" alt="cat">
+    <img id="cat" src="https://i.pinimg.com/originals/42/61/ec/4261ec8b20a4ec6f9cf047250024371f.gif" width="400vw" height="400vw" alt="cat">
 
     <script>
         function response(answer) {
