--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     </div>
     <h2 id="yes_reaction"></h2>
     <h2 id="no_reaction"></h2>
-    <img id="cat" src="https://i.pinimg.com/originals/42/61/ec/4261ec8b20a4ec6f9cf047250024371f.gif" width="400vw" height="400vw" alt="cat">
+    <img id="cat" src="https://i.pinimg.com/originals/42/61/ec/4261ec8b20a4ec6f9cf047250024371f.gif" width="350vw" height="350vw" alt="cat">
 
     <script>
         function response(answer) {
             const no_repsonses = ["Try again", "Doch", "Wrong answer"];
             const random_no_repsonse = no_repsonses[ parseInt(Math.random() * no_repsonses.length) ];
             if (answer === 'yes') {
-                document.getElementById("yes_reaction").innerHTML = "Yipeeeeeee!!!!!!";
+                document.getElementById("yes_reaction").innerHTML = "Yippeeeeeee!!!!!!";
                 document.getElementById('cat').src = "https://media0.giphy.com/media/beorHuw3tM7tcAFB0v/giphy.gif?cid=6c09b952hai6efaofshjr5scff3aqy86bgbikq7673mmanhh&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g";
                 document.getElementById("no_reaction").innerHTML = '';
             }
