--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             color: pink;
             text-align: center;
-            font-size: 10vw;
+            font-size: 20vw;
         }
         #buttons {
             display: flex;
@@ -61,7 +61,7 @@
             const no_repsonses = ["Try again", "Doch", "Wrong answer"];
             const random_no_repsonse = no_repsonses[ parseInt(Math.random() * no_repsonses.length) ];
             if (answer === 'yes') {
-                document.getElementById("yes_reaction").innerHTML = "Yippeeeeeee!!!!!!";
+                document.getElementById("yes_reaction").innerHTML = "Yippeeeeee!!!";
                 document.getElementById('cat').src = "https://media0.giphy.com/media/beorHuw3tM7tcAFB0v/giphy.gif?cid=6c09b952hai6efaofshjr5scff3aqy86bgbikq7673mmanhh&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g";
                 document.getElementById("no_reaction").innerHTML = '';
             }
